src/objects/ProcedureTrackingBestPractices__mdt.object
<CustomObject>
    <fields>
        <fullName>BestPracticeContent__c</fullName>
        <label>Best Practice Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BestPracticeLabel__c</fullName>
        <label>Best Practice Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDFLinkLabel__c</fullName>
        <label>PDF Link Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDFLinkURL__c</fullName>
        <label>PDF Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Procedure Tracking: Best Practice</label>
    <listViews>
        <fullName>All_Best_Practices</fullName>
        <columns>MasterLabel</columns>
        <columns>BestPracticeLabel__c</columns>
        <columns>DeveloperName</columns>
        <columns>Order__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Best Practices</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Procedure Tracking: Best Practice</pluralLabel>
</CustomObject>